# goit-pythonweb-hw-08

./: README.md  main.py  pyproject.toml
src/: schemas.py
src/api/: contacts.py  groups.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  groups.py
src/services/: contacts.py  groups.py
